Changes for JVM 17 - illegal access override flags and compiler version